# Modern-Python-Pipeline-Test

./: Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/modern_python_pipeline_test/: app.py
tests/: test_app.py
